@@ -9,10 +9,7 @@ import org.apache.logging.log4j.Logger;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 public class SSSOMGenerator {
 
@@ -26,11 +23,15 @@ public class SSSOMGenerator {
     public void run() throws Exception {
 
         run("EFO", "CMO");
+        run("EFO", "MP");
+        run("EFO", "HP");
+        run("EFO", "VT");
+        run("EFO", "RDO");
     }
 
     void run(String ontId1, String ontId2) throws Exception {
 
-        String fileName = ontId1.toLowerCase()+"_"+ontId2.toLowerCase()+"_rgd_all.sssom.tsv";
+        String fileName = ontId1.toLowerCase()+"_"+ontId2.toLowerCase()+"_rgd.sssom.tsv.txt";
         String dirName = "data/ontology/mappings";
         String outFileName = dirName+"/"+fileName;
 
@@ -47,8 +48,8 @@ public class SSSOMGenerator {
         #mapping_tool: RGD SSSOM file generator
         #mapping_tool_version: ###VERSION###
         #mapping_set_id: https://download.rgd.mcw.edu/ontology/mappings/###FILENAME###
-        #mapping_set_title: All mappings of ###ONT1### terms to ###ONT2### terms generated by RGD
-        #mapping_set_description: All mappings of ###ONT1### terms to ###ONT2### terms generated by RGD
+        #mapping_set_title: All mappings of ###ONT1### terms to ###ONT2### terms generated by RGD (draft version)
+        #mapping_set_description: All mappings of ###ONT1### terms to ###ONT2### terms generated by RGD (draft version)
         #license: https://creativecommons.org/licenses/by/4.0/
         #object_source: obo:###ONT1###
         #subject_source: obo:###ONT2###
@@ -71,11 +72,19 @@ public class SSSOMGenerator {
 
         logger.info("written header to "+outFileName);
 
-        List<TermSynonym> synonyms =  dao.getActiveSynonymsByNamePattern(ontId1, ontId2+":%");
+        String termAccPrefix = ontId2+":%";
+        if( ontId2.equals("RDO") ) {
+            termAccPrefix = "DOID:%";
+        }
+        List<TermSynonym> synonyms =  dao.getActiveSynonymsByNamePattern(ontId1, termAccPrefix);
 
         logger.info("retrieved "+synonyms.size()+" "+ontId1+" to "+ontId2+" mappings from database");
 
         List<String> mappings = new ArrayList<>();
+
+        // to exclude duplicates
+        Set<String> mappingIdPairs = new HashSet<>();
+        int duplicateLines = 0;
 
         for( TermSynonym tsyn: synonyms ) {
 
@@ -108,6 +117,16 @@ public class SSSOMGenerator {
             }
             subjectLabel = term.getTerm();
 
+            if( objectId.equals(subjectId) ) {
+                continue;
+            }
+
+            String mappingIdPair = objectId+"|"+subjectId;
+            if( mappingIdPairs.contains(mappingIdPair) ) {
+                duplicateLines++;
+                continue;
+            }
+            mappingIdPairs.add(mappingIdPair);
 
             mappings.add(objectId
                     +"\t"+objectLabel
@@ -131,6 +150,7 @@ public class SSSOMGenerator {
         int mappingsWritten = mappings.size();
 
         logger.info("written "+mappingsWritten+" mappings to "+fileName);
+        logger.info(duplicateLines+" duplicate lines skipped");
     }
 
     String getObjectId( String acc ) {
@@ -151,10 +171,11 @@ public class SSSOMGenerator {
     String getPredicateId( String synonymType ) {
 
         return switch (synonymType) {
-            case "exact_synonym", "primary_id", "alt_id" -> "skos:exactMatch";
-            case "narrow_synonym"                        -> "skos:narrowMatch";
-            case "broad_synonym"                         -> "skos:broadMatch";
-            case "related_synonym", "xref"               -> "skos:relatedMatch";
+            case "exact_synonym", "primary_id", "alt_id", "xref", "exact_xref"
+                                                      -> "skos:exactMatch";
+            case "narrow_synonym", "narrow_xref"      -> "skos:narrowMatch";
+            case "broad_synonym", "broad_xref"        -> "skos:broadMatch";
+            case "related_synonym", "related_xref"    -> "skos:relatedMatch";
             default -> null;
         };
     }
